--- a/cpp_version/INSTALL
+++ b/cpp_version/INSTALL
@@ -1,6 +1,6 @@
 REQUIREMENTS TO BUILD
 
-Basic tool chains to build C++98 or higher software
+Basic tool chains to build C++11 or higher software
 
 Run and dev libraries for JackAudio
 
@@ -27,4 +27,4 @@ CONFIGURATION
 
 TESTED
     It has been (yet) tested on 32 and 64 bits Intel based CPU
-	It has been teste with an old 4.3.4 gcc
+	It has been tested with an old 5.5.0 gcc
