--- a/cpp_version/INSTALL
+++ b/cpp_version/INSTALL
@@ -1,6 +1,6 @@
 REQUIREMENTS TO BUILD
 
-Basic tool chains to build C++11 or higher software
+Basic tool chains to build C++14 or higher software
 
 Run and dev libraries for JackAudio
 
@@ -22,7 +22,7 @@ Graphviz
 CONFIGURATION
     There is no configure file as the software is written and relay on the standard C++ objects
       Then the configuration comes with the compiler
-    Make script understands the CC and CXXFLAGS environement variables
+    Make script understands the CC, CXXFLAGS, LDFLAGS, SCEDIR and BUILDDIR environment variables
 
 
 TESTED
