First C++17 usage, sample-rate parameters more convenient
stringview class implemented and tested using the GCC 7.2.0 compiler
  and linux kernel 5.5.0 on my "vacation laptop".
The sample-rate parameters (-r) can be passed as 1, 2 or 4 as well as 48, 96 or 182
  as well as 3000, 6000, 48000, 96000 or 192000 as well as 3K, 6K, 48K, 96K or 192K.
No general re-factoring is planned.
  It may occur if there are needs of speed or features improvement only.
  I prefer to spend time on the new features.

--- a/README
+++ b/README
@@ -27,4 +27,5 @@ There is no documentation files. All the data is in the code. A run of the Doxyg
 
 For more information, in the sub folders, there are README files specific to each subprojects
 
-As of the summer 2022, there is a change in the minimum requirements for the C++ version
+As of the summer 2022, there is a change in the minimum requirements for the C++ version from C++03 to C++14
+As of the spring 2024, there is a change in the minimum requirements for the C++ version from C++14 to C++17
