Raised the minimum GCC version

--- a/cpp_version/INSTALL
+++ b/cpp_version/INSTALL
@@ -46,5 +46,6 @@ CONFIGURATION
 
 
 TESTED
-    It has been (yet) tested on 32 and 64 bits Intel based CPU
-	It has been tested with an old 8.5.0 gcc compiler
+    It has been (yet) tested on 32 and 64 bits Intel based CPU.
+	It has been tested with an old 13.3.0 gcc compiler.
+	It might work with older compilers, but not that old than the 8.5.0 (problem with the optional template).
